commit translated contents

--- a/articles/active-directory-b2c/index.yml
+++ b/articles/active-directory-b2c/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: msmimart
   ms.author: mimart
   ms.date: 01/28/2020
-  ms.openlocfilehash: 34cb40d385b007f8a41a6700448a1591b714c096
-  ms.sourcegitcommit: 6e1124fc25c3ddb3053b482b0ed33900f46464b3
+  ms.openlocfilehash: 3b1361646bb90677bf97d9666be361d3c439c8a7
+  ms.sourcegitcommit: 638f326d02d108cf7e62e996adef32f2b2896fd5
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/15/2020
-  ms.locfileid: "90562751"
+  ms.lasthandoff: 10/05/2020
+  ms.locfileid: "91728397"
 landingContent:
 - title: Azure AD B2C
   linkLists:
@@ -94,7 +94,7 @@ landingContent:
     - text: 了解用户数据的存储位置
       url: data-residency.md
     - text: 法规
-      url: overview.md
+      url: https://docs.microsoft.com/azure/compliance/
     - text: 用户访问和使用条款
       url: manage-user-access.md
 - title: Operations
@@ -105,8 +105,8 @@ landingContent:
       url: deploy-custom-policies-devops.md
     - text: 监视
       url: azure-monitor.md
-    - text: 针对管理员的基于角色的访问
-      url: overview.md
+    - text: 适用于管理员的基于角色的访问控制
+      url: https://docs.microsoft.com/azure/active-directory/users-groups-roles/directory-assign-admin-roles
     - text: 用户管理
       url: manage-user-accounts-graph-api.md
     - text: 疑难解答
