--- a/articles/storage/blobs/index.yml
+++ b/articles/storage/blobs/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: normesta
   ms.author: normesta
   ms.date: 08/20/2019
-  ms.openlocfilehash: b830092f6a54d2dc460c7aba4338c695d27b16b9
-  ms.sourcegitcommit: 43558caf1f3917f0c535ae0bf7ce7fe4723391f9
+  ms.openlocfilehash: 21736e257a31e65c6cd9ea4a6e1f65cf21bf61d1
+  ms.sourcegitcommit: eb6bef1274b9e6390c7a77ff69bf6a3b94e827fc
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/11/2020
-  ms.locfileid: "90019098"
+  ms.lasthandoff: 10/05/2020
+  ms.locfileid: "91715745"
 landingContent:
 - title: 关于 Blob 存储
   linkLists:
@@ -127,7 +127,7 @@ landingContent:
     links:
     - text: 使用 Azure AD 帐户访问 Blob 数据
       url: authorize-blob-access-portal.md
-    - text: 使用 RBAC 管理访问权限
+    - text: 通过 Azure RBAC 管理服务权限
       url: ../common/storage-auth-aad-rbac-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - text: 使用托管标识授予对 Blob 存储的访问权限
       url: ../common/storage-auth-aad-msi.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
