--- a/articles/azure-vmware/index.yml
+++ b/articles/azure-vmware/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: dikamath
   ms.author: dikamath
   ms.date: 09/21/2020
-  ms.openlocfilehash: 76a879f1c2c228fd509f0b0725b7ff3ddac4fa41
-  ms.sourcegitcommit: a422b86148cba668c7332e15480c5995ad72fa76
+  ms.openlocfilehash: e4f0ad8a075ce187605bf15a7df414825cc252df
+  ms.sourcegitcommit: a07a01afc9bffa0582519b57aa4967d27adcf91a
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/30/2020
-  ms.locfileid: "91574902"
+  ms.lasthandoff: 10/05/2020
+  ms.locfileid: "91742292"
 landingContent:
 - title: 关于 Azure VMware 解决方案
   linkLists:
@@ -80,3 +80,5 @@ landingContent:
       url: disaster-recovery-for-virtual-machines.md
     - text: 通过内容库部署 VM
       url: tutorial-deploy-vm-content-library.md
+    - text: 使用公共 IP 功能
+      url: public-ip-usage.md
