--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -12,12 +12,12 @@ metadata:
   manager: nitinme
   ms.custom: custom-portals-hub
   ms.date: 08/28/2020
-  ms.openlocfilehash: 1500ac7ac362048751be3f91e6c52d4fe446bdc2
-  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
+  ms.openlocfilehash: 36e5543f09971d8456e79a59fc2e5457171f710b
+  ms.sourcegitcommit: a07a01afc9bffa0582519b57aa4967d27adcf91a
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/22/2020
-  ms.locfileid: "90906974"
+  ms.lasthandoff: 10/05/2020
+  ms.locfileid: "91743992"
 highlightedContent:
   items:
   - title: 什么是认知服务？
@@ -38,9 +38,9 @@ highlightedContent:
   - title: 在容器中使用
     itemType: concept
     url: ./cognitive-services-container-support.md
-  - title: 虚拟网络
-    itemType: architecture
-    url: cognitive-services-virtual-networks.md
+  - title: 在数据库中使用
+    itemType: concept
+    url: ./big-data/cognitive-services-for-big-data.md
   - title: 安全性
     itemType: concept
     url: cognitive-services-security.md
@@ -136,6 +136,18 @@ conceptualContent:
     - url: ./containers/container-faq.md
       itemType: reference
       text: 认知服务容器常见问题解答
+  - title: 适用于大数据的认知服务
+    summary: 通过适用于大数据的认知服务，开发人员能在数据库内使用认知服务对大型数据集应用智能算法
+    links:
+    - url: ./big-data/cognitive-services-for-big-data.md
+      itemType: overview
+      text: 适用于大数据的认知服务
+    - url: ./big-data/getting-started.md
+      itemType: get-started
+      text: 在 Azure Databricks 和 Synapse Analytics 内使用认知服务
+    - url: ./big-data/samples-python.md
+      itemType: reference
+      text: Python 示例
 additionalContent:
   sections:
   - title: 其他资源
@@ -166,6 +178,8 @@ additionalContent:
         url: https://docs.microsoft.com/python/api/overview/azure/cognitive-services?view=azure-python
       - text: R
         url: https://github.com/Azure/AzureCognitive
+      - text: Apache Spark 和数据库
+        url: ./big-data/cognitive-services-for-big-data.md
       - text: 认知服务管理 REST API
         url: https://docs.microsoft.com/rest/api/cognitiveservices/
     - title: 工具
