--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -114,6 +114,8 @@
           href: sap-hana-high-availability-netapp-files-red-hat.md
         - name: 排查 SAP HANA 横向扩展和 SLES 上的 Pacemaker 问题
           href: hana-vm-troubleshoot-scale-out-ha-on-sles.md
+        - name: 在 RHEL 上通过 Pacemaker 使用 HSR 横向扩展 SAP HANA
+          href: sap-hana-high-availability-scale-out-hsr-rhel.md
         - name: 在 SLES 上通过 Azure NetApp 文件使用备用节点横向扩展 SAP HANA
           href: sap-hana-scale-out-standby-netapp-files-suse.md
         - name: 在 RHEL 上通过 Azure NetApp 文件使用备用节点横向扩展 SAP HANA
