--- a/articles/hdinsight/storm/breadcrumb/toc.yml
+++ b/articles/hdinsight/storm/breadcrumb/toc.yml
@@ -6,9 +6,9 @@
       tocHref: /azure/hdinsight/
       topicHref: /azure/hdinsight/index
       items:
-        - name: Storm
+        - name: 暴风
           tocHref: /azure/hdinsight/hadoop/
           topicHref: /azure/hdinsight/storm/index
-        - name: Storm
+        - name: 暴风
           tocHref: /azure/hdinsight/domain-joined/
           topicHref: /azure/hdinsight/storm/index
