--- a/articles/industry/index.yml
+++ b/articles/industry/index.yml
@@ -12,10 +12,10 @@ metadata:
   ms.author: dacoulte
   ms.date: 11/04/2019
   ms.openlocfilehash: 1ea17f2aef7cd2dc55b93db7e9114adcd534d004
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "75435151"
 highlightedContent:
   items:
@@ -47,7 +47,7 @@ productDirectory:
     imageSrc: ../media/index/industry-manufacturing.png
     summary: 制造行业的解决方案和用例。
     url: /azure/industry-marketing/manufacturing/
-  - title: 零售
+  - title: Retail
     imageSrc: ../media/index/industry-retail.png
     summary: 零售行业的解决方案和用例。
     url: /azure/industry-marketing/retail/
