--- a/articles/key-vault/breadcrumb/toc.yml
+++ b/articles/key-vault/breadcrumb/toc.yml
@@ -42,7 +42,7 @@
             - name: 证书
               tocHref: /cli/azure/keyvault/certificate
               topicHref: /azure/key-vault/
-            - name: 密钥
+            - name: 键
               tocHref: /cli/azure/keyvault/key
               topicHref: /azure/key-vault/
             - name: 机密
