--- a/articles/storage/files/index.yml
+++ b/articles/storage/files/index.yml
@@ -13,10 +13,10 @@ metadata:
   ms.author: rogarana
   ms.date: 08/27/2019
   ms.openlocfilehash: 3e9224746c400f9795e16edd51b69740fb3c45c7
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "72299558"
 landingContent:
 - title: 关于 Azure 文件
@@ -43,7 +43,7 @@ landingContent:
     links:
     - text: 使用 Azure 文件同步扩展 Windows 文件服务器
       url: storage-sync-files-extend-servers.md
-- title: 故障排除
+- title: 疑难解答
   linkLists:
   - linkListType: reference
     links:
