--- a/articles/media-services/TOC.yml
+++ b/articles/media-services/TOC.yml
@@ -7,7 +7,7 @@
   href: video-indexer/
 - name: Azure Media Player
   href: 'https://amp.azure.net/libs/amp/latest/docs/index.html'
-- name: 规范
+- name: 规格
   items:
     - name: 超时元数据
       items:
