--- a/articles/fxt-edge-filer/toc.yml
+++ b/articles/fxt-edge-filer/toc.yml
@@ -22,7 +22,7 @@
       href: fxt-configure-network.md
     - name: 8 - 装载客户端
       href: fxt-mount-clients.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 监视 Azure FXT Edge Filer 硬件
       href: fxt-monitor.md
