--- a/articles/virtual-network/index.yml
+++ b/articles/virtual-network/index.yml
@@ -12,10 +12,10 @@ metadata:
   ms.author: kumud
   ms.date: 08/28/2019
   ms.openlocfilehash: a6c0bee32fbeb50c1eef0a9625706bcee9e1ae17
-  ms.sourcegitcommit: 09a124d851fbbab7bc0b14efd6ef4e0275c7ee88
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/23/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "82086464"
 landingContent:
 - title: 关于虚拟网络
@@ -40,7 +40,7 @@ landingContent:
       url: manage-virtual-network.md
     - text: 添加、更改或删除子网
       url: virtual-network-manage-subnet.md
-- title: 保护网络流量的安全
+- title: 安全的网络流量
   linkLists:
   - linkListType: concept
     links:
