--- a/articles/dms/toc.yml
+++ b/articles/dms/toc.yml
@@ -89,7 +89,7 @@
           href: howto-sql-server-to-azure-sql-mi-powershell.md
     - name: 将 SSIS 包重新部署到
       items:
-        - name: Azure SQL Database
+        - name: Azure SQL 数据库
           href: how-to-migrate-ssis-packages.md
         - name: Azure SQL 托管实例
           href: how-to-migrate-ssis-packages-managed-instance.md
