--- a/articles/iot-hub/index.yml
+++ b/articles/iot-hub/index.yml
@@ -12,10 +12,10 @@ metadata:
   ms.date: 03/23/2020
   ms.custom: amqp
   ms.openlocfilehash: 949a007a51fce4a76dcc840f187ca353c88e8ede
-  ms.sourcegitcommit: dccb85aed33d9251048024faf7ef23c94d695145
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/28/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "87291597"
 landingContent:
 - title: 入门
@@ -96,7 +96,7 @@ landingContent:
   linkLists:
   - linkListType: concept
     links:
-    - text: 控制对 IoT 中心的访问
+    - text: 控制 IoT 中心的访问权限
       url: iot-hub-devguide-security.md
     - text: 使用 X.509 CA 证书进行设备身份验证
       url: iot-hub-x509ca-overview.md
