--- a/articles/azure-portal/index.yml
+++ b/articles/azure-portal/index.yml
@@ -13,10 +13,10 @@ metadata:
   ms.author: mblythe
   ms.date: 08/05/2020
   ms.openlocfilehash: f45fc98073dcc6eeee10c691fe9f93860e0fb654
-  ms.sourcegitcommit: 4913da04fd0f3cf7710ec08d0c1867b62c2effe7
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/14/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "88212088"
 landingContent:
 - title: 关于 Azure 门户
@@ -63,7 +63,7 @@ landingContent:
       url: azure-portal-video-series.md
   - linkListType: learn
     links:
-    - text: Azure 基础
+    - text: Azure 基础知识
       url: /learn/paths/azure-fundamentals/
     - text: 云概念 - 云计算的原则
       url: /learn/modules/principles-cloud-computing/
