--- a/articles/security/index.yml
+++ b/articles/security/index.yml
@@ -15,10 +15,10 @@ metadata:
   manager: rkarlin
   ms.date: 08/29/2019
   ms.openlocfilehash: de2b3baae0ab999c0e3eb8ed76194632e7b066e6
-  ms.sourcegitcommit: 8def3249f2c216d7b9d96b154eb096640221b6b9
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/03/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "87540846"
 highlightedContent:
   items:
@@ -76,7 +76,7 @@ conceptualContent:
     links:
     - url: ../key-vault/key-vault-overview.md
       itemType: overview
-      text: 什么是 Azure Key Vault？
+      text: 什么是 Azure 密钥保管库？
     - url: ../key-vault/quick-create-cli.md
       itemType: quickstart
       text: 设置和检索机密
