--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -14,10 +14,10 @@ metadata:
   ms.author: mbaldwin
   ms.date: 04/07/2020
   ms.openlocfilehash: f3711352d18b0f225ed94c0b09ec17b7a90917ac
-  ms.sourcegitcommit: b4f303f59bb04e3bae0739761a0eb7e974745bb7
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/02/2020
+  ms.lasthandoff: 10/09/2020
   ms.locfileid: "91653071"
 highlightedContent:
   items:
@@ -57,7 +57,7 @@ conceptualContent:
       text: 监视和管理证书创建
     footerLink:
       url: ./certificates/index.yml
-      text: 查看更多
+      text: 查看详细信息
   - title: 键
     links:
     - url: ./keys/about-keys.md
