--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -35,7 +35,7 @@
       href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Python
       href: ../common/storage-samples-python.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-    - name: Javascript
+    - name: JavaScript
       href: ../common/storage-samples-javascript.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: 其他语言
       href: ../common/storage-samples.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
