--- a/articles/devops-project/index.yml
+++ b/articles/devops-project/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: 
   ms.author: 
   ms.date: 03/24/2020
-  ms.openlocfilehash: 461d088f85f6845dfb9204381209b477b384a0be
-  ms.sourcegitcommit: 58faa9fcbd62f3ac37ff0a65ab9357a01051a64f
+  ms.openlocfilehash: 62e95192f25487be60ed0334054f200447fc64cb
+  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/28/2020
-  ms.locfileid: "82231454"
+  ms.lasthandoff: 10/09/2020
+  ms.locfileid: "91855933"
 landingContent:
 - title: 关于 Azure DevOps Starter
   linkLists:
@@ -31,24 +31,24 @@ landingContent:
   - linkListType: quickstart
     links:
     - text: .NET
-      url: /azure/devops-project/azure-devops-project-aspnet-core
+      url: ./azure-devops-project-aspnet-core.md
     - text: Node.js
-      url: /azure/devops-project/azure-devops-project-nodejs
+      url: ./azure-devops-project-nodejs.md
     - text: Java
-      url: /azure/devops-project/azure-devops-project-java
+      url: ./azure-devops-project-java.md
     - text: Python
-      url: /azure/devops-project/azure-devops-project-python
+      url: ./azure-devops-project-python.md
     - text: PHP
-      url: /azure/devops-project/azure-devops-project-php
+      url: ./azure-devops-project-php.md
     - text: Ruby
-      url: /azure/devops-project/azure-devops-project-ruby
+      url: ./azure-devops-project-ruby.md
     - text: Go
-      url: /azure/devops-project/azure-devops-project-go
+      url: ./azure-devops-project-go.md
 - title: 创建发布管道
   linkLists:
   - linkListType: tutorial
     links:
-    - text: 通过 GitHub 使用自己的代码
+    - text: 通过 GitHub 使用自带代码
       url: azure-devops-project-vms.md
     - text: 将 ASP.NET 应用部署到 Azure 虚拟机
       url: azure-devops-project-vms.md
